  file handles are closed.

- [feature] PyPy is supported.

- [feature] Python 2.5 is supported, needs 
  __future__.with_statement

- [bug] Fix autogenerate so that "pass" is 
  generated between the two comments
  if no net migrations were present.

- [bug] Fix autogenerate bug that prevented
  correct reflection of a foreign-key
  referenced table in the list of "to remove".
  [#16]

0.1.0
=====
- Initial release.  Status of features:

- Alembic is used in at least one production 
  environment, but should still be considered 
  ALPHA LEVEL SOFTWARE as of this release,
  particularly in that many features are expected
  to be missing / unimplemented.   Major API
  changes are not anticipated but for the moment
  nothing should be assumed.

  The author asks that you *please* report all
  issues, missing features, workarounds etc.
  to the bugtracker, at 
  https://bitbucket.org/zzzeek/alembic/issues/new .

- Python 3 is supported and has been tested.

- The "Pylons" and "MultiDB" environment templates
  have not been directly tested - these should be 
  considered to be samples to be modified as
  needed.   Multiple database support itself 
  is well tested, however.

- Postgresql and MS SQL Server environments
  have been tested for several weeks in a production
  environment.  In particular, some involved workarounds
  were implemented to allow fully-automated dropping 
  of default- or constraint-holding columns with 
  SQL Server.

- MySQL support has also been implemented to a 
  basic degree, including MySQL's awkward style
  of modifying columns being accommodated.

- Other database environments not included among
  those three have *not* been tested, *at all*.  This
  includes Firebird, Oracle, Sybase.   Adding
  support for these backends should be 
  straightforward.  Please report all missing/
  incorrect behaviors to the bugtracker! Patches
  are welcome here but are optional - please just
  indicate the exact format expected by the target